syntax = "proto3";

import  "github.com/ofgp/ofgp-core/proto/braft.proto";
package p2p;

message p2pMsg {
    string send_addr = 2;
    string receive_addr = 3;
    uint32 chain = 4;
    uint32 token_id = 5;
    uint64 amount = 6;
    uint64 fee = 7;
    uint32 expired_time=8;
    string require_addr =9;
}
// 待匹配交易
message p2pInfo {
   proto.WatchedEvent  event = 1;
   p2pMsg msg = 2;
   int64 time = 3;
}


message p2pConfirmMsg{
    uint32 opration = 1;
    string id = 2;
    string tx_id = 3;
    uint32 chain = 4;
    uint64 height = 5;
    string block_hash= 6;
    uint64 amount = 7;
    uint64 fee = 8;
}

message waitConfirmMsg{
    uint32 opration = 1; //标识回退交易或者匹配交易
    p2pConfirmInfo info = 2; //匹配成功发送的交易
}

//被确认交易
message p2pConfirmInfo{
   proto.WatchedEvent  event = 1;
   p2pConfirmMsg msg = 2;
}
message sendedTx{
    string tx_id = 1;
    int64 time = 2;
    int64 sign_term = 3;
}


// 创建待匹配交易索引
message txNode{
    string value = 1;
    map<string,txNode> childs = 2;
}